fix: adjust Modal close button spacing when title is hidden Fixes Shopify/polaris/issues/5279

--- a/polaris-react/src/components/Modal/components/Header/Header.scss
+++ b/polaris-react/src/components/Modal/components/Header/Header.scss
@@ -10,8 +10,10 @@
 
 .titleHidden {
   position: absolute;
-  right: var(--p-space-2);
+  right: 0;
   z-index: 1;
+  padding-top: var(--p-space-4);
+  padding-right: var(--p-space-5);
 
   .Title {
     display: none;
